[package]
name = "fdisk"
version = "0.1.1"
authors = ["Nikita Dubrovskii <nikita@linux.ibm.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/IBM/fdisk"
description = "Rust wrappers for libfdisk"

[dependencies]
libc="^0.2.65"
error-chain = { version = "0.12", default-features = false }
fdisk-sys = "^0.1.0"
nix = "0.16.1"
