[package]
name = "fdisk"
version = "0.2.0"
authors = ["Nikita Dubrovskii <nikita@linux.ibm.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/IBM/fdisk"
description = "Rust wrappers for libfdisk"

[dependencies]
anyhow = "^1.0.72"
libc="^0.2.141"
fdisk-sys = "^0.2.0"
nix = "0.26.1"
